<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login / Signup</string>
    <string name="menu_settings">Settings</string>


    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slide Show</string>
    <string name="action_settings">Setings</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>

</resources>