<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="io.realworld.android.conduit.ui.feed.GlobalFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/open_article_globel_feed"
            app:destination="@id/nav_article"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">

            <argument
                android:name="@string/arg_article_id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_my_feed"
        android:name="io.realworld.android.conduit.ui.feed.MyFeedFragment"
        android:label="@string/menu_my_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/open_article_my_feed"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="@string/arg_article_id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_article"
        android:name="io.realworld.android.conduit.ui.article.ArticleFragment"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.realworld.android.conduit.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_auth"
        android:name="io.realworld.android.conduit.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="io.realworld.android.conduit.ui.auth.LogoutFragment"
        android:label="@string/action_logout" />
</navigation>